<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterLiteClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login User</string>
    <string name="login_placeholder">login</string>
    <string name="create_usr">Create User</string>
    <string name="e_mail">E-mail</string>
    <string name="create">Create</string>
    <string name="my_msgs">My Messages</string>
    <string name="post_message">post message</string>
    <string name="post_msg_hint">Text length must be between 1 and 140 characters.</string>
    <string name="post">Post</string>
    <string name="message_text_placeholder">Message Text placeholder</string>
    <string name="msg_date_placeholder">dd/MM/yyyy</string>
    <string name="sender_login">sender login</string>
    <string name="or">or</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="timeline">TimeLine</string>
    <string name="user_firstname_placeholder">user firstName placeholder</string>
    <string name="email_placeholder">Email placeholder</string>
    <string name="all_users">All users</string>
    <string name="all_messages">All Messages</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="no_messages">No messages</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="update">Update</string>
    <string name="build_by">Build by Gregory</string>

</resources>
