<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/create_usr"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginTop="40dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="40dp"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name"
            android:layout_marginTop="40dp"
            android:hint="@string/lastname" />

        <RelativeLayout
            android:id="@+id/button_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/update" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dip" />
    </RelativeLayout>

</RelativeLayout>