<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:background="@android:color/white">
    
    <TextView
        android:id="@+id/email" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	
        android:text="@string/email_placeholder"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        />
    
    <TextView
        android:id="@+id/login" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	
       	android:layout_toRightOf="@+id/email"
       	android:layout_marginLeft="10dp"
       	
        android:text="@string/login_placeholder"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        />
    
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        
        android:text="@string/user_firstname_placeholder"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    
</RelativeLayout>
