<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/post_message"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" >

        <EditText
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:inputType="textMultiLine"
            android:maxLength="139"
            android:hint="@string/post_msg_hint" />

        <Button
            android:id="@+id/post_msg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:text="@string/post" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_below="@+id/msg"
            android:layout_marginTop="45dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</RelativeLayout>